--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="description" content="Flavish offers exquisite decor, unique gifts, and vibrant floral arrangements to make your loved ones feel special and valued." />
-    <meta name="keywords" content="decor, gifts, flower shop, floral arrangements, celebrations, elegance" />
+    <meta
+      name="description"
+      content="Flavish offers exquisite decor, unique gifts, and vibrant floral arrangements to make your loved ones feel special and valued."
+    />
+    <meta
+      name="keywords"
+      content="decor, gifts, flower shop, floral arrangements, celebrations, elegance"
+    />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Flavish Creations" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ebimela</title>
+    <title>Flavish</title>
     <script type="module" crossorigin src="/src/main.jsx"></script>
-    <link rel="stylesheet" crossorigin href="/src/index.css">
+    <link rel="stylesheet" crossorigin href="/src/index.css" />
   </head>
   <body>
     <div id="root"></div>
